<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Product</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">edit a product</string>


    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <!--<string name="category_measurement">Measurement</string>-->

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_quantity">Quantity</string>
    <string name="hint_inventory_image">Product image</string>
    <string name="hint_inventory_supplier">Supplier </string>
    <string name="hint_inventory_supplier_name">Supplier name</string>
    <string name="hint_inventory_supplier_email">Supplier email</string>
    <string name="hint_inventory_supplier_phone_number">Supplier phone number</string>

    <string name="editor_insert_inventory_successful">inventory saved</string>
    editor_update_pet_failed
    <string name="editor_insert_inventory_failed">Error with saving inventory</string>
    <string name="editor_update_inventory_failed">Error with updating inventory</string>
    <string name="editor_update_inventory_successful">inventory updated</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="unknown_name">unKnown name</string>
    <!-- Units [CHAR LIMIT=5] -->
    <string name="unit_inventory_price">$</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_successful">product deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="unknown_phone">Unknown Phone</string>

</resources>
