<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/see"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ViewProduct">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/delails_inventory_name"
                style="@style/ViewStyle"
                android:hint="@string/hint_inventory_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>


    <!-- price category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- price -->
            <TextView
                android:id="@+id/delails_inventory_price"
                style="@style/ViewStyle"
                android:hint="@string/hint_inventory_price"
                android:inputType="numberDecimal" />

            <!-- Units  -->
            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_inventory_price" />
        </RelativeLayout>
    </LinearLayout>

    <!-- mQuantityEditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/delails_inventory_quantity"
                style="@style/ViewStyle"
                android:text="0"

                />


        </LinearLayout>
    </LinearLayout>

    <!-- imageEditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_image" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Name field -->
            <TextView
                android:id="@+id/delails_inventory_image"
                style="@style/ViewStyle"
                android:hint="@string/hint_inventory_name" />

        </LinearLayout>
    </LinearLayout>

    <!-- supplier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/delails_inventory_supplier_name"
                style="@style/ViewStyle"
                android:hint="@string/hint_inventory_supplier_name"
                android:inputType="textCapWords" />
            <!-- Name field -->
            <EditText
                android:id="@+id/delails_inventory_supplier_email"
                style="@style/ViewStyle"
                android:hint="@string/hint_inventory_supplier_email"
                android:inputType="text" />
            <!-- Name field -->
            <EditText
                android:id="@+id/delails_inventory_supplier_phone"
                style="@style/ViewStyle"
                android:hint="@string/hint_inventory_supplier_phone_number"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <!--<Button-->
    <!--android:id="@+id/editButton"-->
    <!--style="@style/EditorFieldStyle"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingTop="16dp"-->
    <!--android:text="edit product" />-->

    <!--</LinearLayout>-->

</LinearLayout>
