<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ViewProduct">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/edit_inventory_name"
                style="@style/EditorFieldStyle"
                android:layout_height="match_parent"
                android:hint="@string/hint_inventory_name"
                android:paddingTop="12dp" />

        </LinearLayout>
    </LinearLayout>


    <!-- price category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- price -->
            <TextView
                android:id="@+id/edit_inventory_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_price"
                android:inputType="numberDecimal" />

            <!-- Units  -->
            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_inventory_price" />
        </RelativeLayout>
    </LinearLayout>

    <!-- mQuantityEditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingTop="12dp">

            <Button
                android:id="@+id/decreament"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-" />

            <TextView
                android:id="@+id/edit_inventory_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increament"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+" />


        </LinearLayout>
    </LinearLayout>

    <!-- imageEditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_image" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/edit_inventory_image"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_name"
                android:inputType="text"
                android:paddingTop="12dp" />

        </LinearLayout>
    </LinearLayout>

    <!-- supplier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_inventory_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/edit_inventory_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_supplier_name"
                android:paddingTop="12dp" />
            <!-- Name field -->
            <TextView
                android:id="@+id/edit_inventory_supplier_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_supplier_email"
                android:paddingTop="12dp" />
            <!-- Name field -->
            <TextView
                android:id="@+id/edit_inventory_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_supplier_phone_number"
                android:paddingTop="12dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/call"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Call Supplier" />

        <Button
            android:id="@+id/view"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Edit Product" />

    </LinearLayout>

</LinearLayout>
